# holo-desktop-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-hai-runtime-candidate/: action.yml
.github/actions/setup-linux-desktop/: action.yml
.github/workflows/: ci.yml  holo-full-e2e.yml  holo-live-smoke.yml  publish.yml
docs/: self-hosting.md
examples/: README.md
examples/expense_report/: Makefile  README.md  pyproject.toml
examples/expense_report/manifests/: expense_report.toml
examples/expense_report/src/expense_report_demo/: __init__.py  apps.py  cli.py  fixtures.py  holo_kwargs.py  metrics.py  session.py
examples/expense_report/src/expense_report_demo/demos/: expense_report.py  registry.py  runner.py  verify.py
examples/expense_report/src/expense_report_demo/skills/: __init__.py
examples/expense_report/src/expense_report_demo/skills/expense-report/: SKILL.md
examples/expense_report/tests/: conftest.py  test_apps.py  test_cli_run.py  test_demo_registry.py  test_fixtures.py  test_metrics.py  test_runner_persistence.py  test_session.py  test_skills_install.py  test_step_timings_render.py  test_verify.py
examples/software_qa/: .env.example  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
examples/software_qa/.claude/: launch.json
examples/software_qa/.claude/skills/holo-qa/: SKILL.md
examples/software_qa/.cursor/agents/: nimbus-qa.md
examples/software_qa/.cursor/rules/: holo-qa.mdc
examples/software_qa/qa/: auth-gating.md  auth-login.md  chat-escalation.md  chat-widget.md  tickets-filter.md
examples/software_qa/src/: App.jsx  auth.jsx  main.jsx  regressions.js  styles.css
examples/software_qa/src/components/: ChatWidget.jsx
examples/software_qa/src/pages/: Dashboard.jsx  Login.jsx  Settings.jsx  Tickets.jsx
install/: README.md  install.ps1  install.sh  manifest.json
scripts/: build_windows_arm64_dependency_wheel.ps1  bump_runtime.py  ci_examples.sh
shas/: darwin-arm64.txt  linux-x86_64.txt  windows-arm64.txt  windows-x86_64.txt
src/holo_desktop/: __init__.py  __main__.py  customization.py  fs.py  installer_bootstrap.py  retina_proxy.py  settings.py
src/holo_desktop/agent_client/: __init__.py  client.py  desktop_lock.py  event_timings.py  events.py  launcher.py  legacy_state.py  model_gateway.py  permissions.py  requests.py  runtime_install.py  sdk_runtime.py  session_runner.py
src/holo_desktop/cli/: __init__.py  acp.py  agent_api.py  bootstrap.py  doctor.py  guard.py  hosts.py  install.py  login.py  login_pages.py  mcp.py  profile.py  retina_proxy.py  run.py  serve.py  setup.py  stop.py  whoami.py
src/holo_desktop/host_integrations/: __init__.py
src/holo_desktop/host_integrations/nemoclaw/: __init__.py  bridge_server.py  constants.py  holo_mcp_bridge.mjs  install.py
src/holo_desktop/host_skills/holo-desktop/: SKILL.md
src/holo_desktop/killswitch/: __init__.py  autostart.py  channel.py  gesture.py  listener.py  macos_tap.py
src/holo_desktop/skills/macos/apple-calendar/: SKILL.md
src/holo_desktop/skills/macos/apple-contacts/: SKILL.md
src/holo_desktop/skills/macos/apple-mail/: SKILL.md
src/holo_desktop/skills/macos/apple-messages/: SKILL.md
src/holo_desktop/skills/macos/apple-notes/: SKILL.md
src/holo_desktop/skills/macos/apple-reminders/: SKILL.md
src/holo_desktop/skills/macos/apple-system-settings/: SKILL.md
src/holo_desktop/skills/macos/chrome/: SKILL.md
src/holo_desktop/skills/macos/discord/: SKILL.md
src/holo_desktop/skills/macos/finder/: SKILL.md
src/holo_desktop/skills/macos/notion/: SKILL.md
src/holo_desktop/skills/macos/safari/: SKILL.md
src/holo_desktop/skills/macos/slack/: SKILL.md
src/holo_desktop/skills/macos/spotify/: SKILL.md
src/holo_desktop/skills/windows/chrome/: SKILL.md
src/holo_desktop/skills/windows/discord/: SKILL.md
src/holo_desktop/skills/windows/edge/: SKILL.md
src/holo_desktop/skills/windows/file-explorer/: SKILL.md
src/holo_desktop/skills/windows/notion/: SKILL.md
src/holo_desktop/skills/windows/outlook/: SKILL.md
src/holo_desktop/skills/windows/slack/: SKILL.md
src/holo_desktop/terminal/: __init__.py  feed.py
tests/: conftest.py  test_acp_terminal_mapping.py  test_agent_api_client.py  test_agent_client_adapter.py  test_bump_runtime.py  test_consume_until_stop.py  test_customization.py  test_desktop_lock.py  test_doctor.py  test_event_timings.py  test_events_format.py  test_feed.py  test_install_hosts.py  test_install_scripts_static.py  test_integration_real.py  test_launcher.py  test_launcher_pid.py  test_launcher_runs_dir.py  test_launcher_spawn.py  test_launcher_token.py  test_local_base_url_contract.py  test_local_mode_integration.py  test_local_runtime_contract.py  test_login.py  test_mcp_loads_holo_env.py  test_mcp_terminal_mapping.py  test_model_gateway.py  test_nemoclaw_bridge_server.py  test_nemoclaw_install.py  test_permission_walkthrough.py  test_profile.py  test_publish_workflow_static.py  test_requests.py  test_run_port_env.py  test_run_turn_stop.py  test_runtime_install.py  test_sdk_runtime.py  test_serve_port_env.py  test_serve_terminal_mapping.py  test_session_runner.py  (+5 more)
tests/e2e/: COVERAGE.md  README.md  __init__.py  _artifacts.py  _domain.py  _environment.py  _harness.py  _linux.py  _linux_launcher.py  _macos.py  _preserve.py  _report.py  _runner.py  _smoke_report.py  conftest.py  test_harness_contract.py  test_live_foreground.py  test_report.py  test_smoke_report.py
tests/e2e/environments/: __init__.py  linux.py  macos.py  windows.py
tests/e2e/evaluators/: __init__.py  browser.py  calculator.py  finder.py  linux.py  textedit.py
tests/e2e/tasks/: __init__.py  browser.py  calculator.py  finder.py  textedit.py
tests/killswitch/: test_autostart.py  test_channel.py  test_gesture.py  test_listener.py  test_macos_tap.py
(+2 files in other folders)
